--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "myhomebar",
   "version": "1.0.0",
   "description": "My home bar",
-  "main": "index.js",
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
@@ -28,6 +27,10 @@
     "parcel": "^2.4.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.5",
+    "@mui/material": "^5.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
