--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
+    "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.0",
+    "dexie": "^3.2.1",
+    "dexie-react-hooks": "^1.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
