--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "parcel",
     "build": "parcel build",
     "lint": "eslint src/**/*.tsx src/**/*.ts",
+    "check": "tsc --noEmit --project .tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Samokhin Alex",
@@ -33,8 +34,8 @@
     "@mui/icons-material": "^5.6.1",
     "@mui/lab": "^5.0.0-alpha.78",
     "@mui/material": "^5.6.0",
-    "dexie": "^3.2.1",
-    "dexie-react-hooks": "^1.1.1",
+    "dexie": "3.2.2",
+    "dexie-react-hooks": "1.0.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
