--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,3 +23,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm run lint
     - run: npm run check
+    - uses: fossas/fossa-action@main # Use a specific version if locking is preferred
+      with:
+        api-key: ${{secrets.fossaApiKey}}
