--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "parcel build",
     "lint": "eslint src/**/*.tsx src/**/*.ts",
     "check": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "cypress open"
+    
   },
   "author": "Samokhin Alex",
   "license": "AGPL-3.0",
@@ -18,6 +20,7 @@
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "cypress": "^10.3.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
